--- a/microservicioinscripcion-dev.properties
+++ b/microservicioinscripcion-dev.properties
@@ -1,7 +1,7 @@
 cliente.property= msinscripcionrest entorno Desarrollo
 
 
-spring.data.mongodb.uri=mongodb://localhost:27017/Liga
+spring.data.mongodb.uri=mongodb://localhost:27017/LigaBD
 
-app.testPropiedad=Propiedad para test
+#app.testPropiedad=Propiedad para test
 
